--- a/src/Content_based.ipynb
+++ b/src/Content_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "af546586",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "import difflib\n",
-    "path = r'netflix_titles.csv'\n",
+    "path = r'data\\netflix_titles.csv'\n",
     "df = pd.read_csv(path,encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "be41ae47",
    "metadata": {},
    "outputs": [
@@ -102,216 +102,53 @@
        "      <td>Crime TV Shows, International TV Shows, TV Act...</td>\n",
        "      <td>To protect his family from a powerful drug lor...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>s4</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Jailbirds New Orleans</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>Docuseries, Reality TV</td>\n",
-       "      <td>Feuds, flirtations and toilet talk go down amo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>s5</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Kota Factory</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...</td>\n",
-       "      <td>India</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>2 Seasons</td>\n",
-       "      <td>International TV Shows, Romantic TV Shows, TV ...</td>\n",
-       "      <td>In a city of coaching centers known to train I...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>s6</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>Midnight Mass</td>\n",
-       "      <td>Mike Flanagan</td>\n",
-       "      <td>Kate Siegel, Zach Gilford, Hamish Linklater, H...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>1 Season</td>\n",
-       "      <td>TV Dramas, TV Horror, TV Mysteries</td>\n",
-       "      <td>The arrival of a charismatic young priest brin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>s7</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>My Little Pony: A New Generation</td>\n",
-       "      <td>Robert Cullen, JosÃ© Luis Ucha</td>\n",
-       "      <td>Vanessa Hudgens, Kimiko Glenn, James Marsden, ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>91 min</td>\n",
-       "      <td>Children &amp; Family Movies</td>\n",
-       "      <td>Equestria's divided. But a bright-eyed hero be...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>s8</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>Sankofa</td>\n",
-       "      <td>Haile Gerima</td>\n",
-       "      <td>Kofi Ghanaba, Oyafunmike Ogunlano, Alexandra D...</td>\n",
-       "      <td>United States, Ghana, Burkina Faso, United Kin...</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>TV-MA</td>\n",
-       "      <td>125 min</td>\n",
-       "      <td>Dramas, Independent Movies, International Movies</td>\n",
-       "      <td>On a photo shoot in Ghana, an American model s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>s9</td>\n",
-       "      <td>TV Show</td>\n",
-       "      <td>The Great British Baking Show</td>\n",
-       "      <td>Andy Devonshire</td>\n",
-       "      <td>Mel Giedroyc, Sue Perkins, Mary Berry, Paul Ho...</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TV-14</td>\n",
-       "      <td>9 Seasons</td>\n",
-       "      <td>British TV Shows, Reality TV</td>\n",
-       "      <td>A talented batch of amateur bakers face off in...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>s10</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>The Starling</td>\n",
-       "      <td>Theodore Melfi</td>\n",
-       "      <td>Melissa McCarthy, Chris O'Dowd, Kevin Kline, T...</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>September 24, 2021</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>PG-13</td>\n",
-       "      <td>104 min</td>\n",
-       "      <td>Comedies, Dramas</td>\n",
-       "      <td>A woman adjusting to life after a loss contend...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  show_id     type                             title  \\\n",
-       "0      s1    Movie              Dick Johnson Is Dead   \n",
-       "1      s2  TV Show                     Blood & Water   \n",
-       "2      s3  TV Show                         Ganglands   \n",
-       "3      s4  TV Show             Jailbirds New Orleans   \n",
-       "4      s5  TV Show                      Kota Factory   \n",
-       "5      s6  TV Show                     Midnight Mass   \n",
-       "6      s7    Movie  My Little Pony: A New Generation   \n",
-       "7      s8    Movie                           Sankofa   \n",
-       "8      s9  TV Show     The Great British Baking Show   \n",
-       "9     s10    Movie                      The Starling   \n",
+       "  show_id     type                 title         director  \\\n",
+       "0      s1    Movie  Dick Johnson Is Dead  Kirsten Johnson   \n",
+       "1      s2  TV Show         Blood & Water              NaN   \n",
+       "2      s3  TV Show             Ganglands  Julien Leclercq   \n",
        "\n",
-       "                         director  \\\n",
-       "0                 Kirsten Johnson   \n",
-       "1                             NaN   \n",
-       "2                 Julien Leclercq   \n",
-       "3                             NaN   \n",
-       "4                             NaN   \n",
-       "5                   Mike Flanagan   \n",
-       "6  Robert Cullen, JosÃ© Luis Ucha   \n",
-       "7                    Haile Gerima   \n",
-       "8                 Andy Devonshire   \n",
-       "9                  Theodore Melfi   \n",
+       "                                                cast        country  \\\n",
+       "0                                                NaN  United States   \n",
+       "1  Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   South Africa   \n",
+       "2  Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...            NaN   \n",
        "\n",
-       "                                                cast  \\\n",
-       "0                                                NaN   \n",
-       "1  Ama Qamata, Khosi Ngema, Gail Mabalane, Thaban...   \n",
-       "2  Sami Bouajila, Tracy Gotoas, Samuel Jouy, Nabi...   \n",
-       "3                                                NaN   \n",
-       "4  Mayur More, Jitendra Kumar, Ranjan Raj, Alam K...   \n",
-       "5  Kate Siegel, Zach Gilford, Hamish Linklater, H...   \n",
-       "6  Vanessa Hudgens, Kimiko Glenn, James Marsden, ...   \n",
-       "7  Kofi Ghanaba, Oyafunmike Ogunlano, Alexandra D...   \n",
-       "8  Mel Giedroyc, Sue Perkins, Mary Berry, Paul Ho...   \n",
-       "9  Melissa McCarthy, Chris O'Dowd, Kevin Kline, T...   \n",
-       "\n",
-       "                                             country          date_added  \\\n",
-       "0                                      United States  September 25, 2021   \n",
-       "1                                       South Africa  September 24, 2021   \n",
-       "2                                                NaN  September 24, 2021   \n",
-       "3                                                NaN  September 24, 2021   \n",
-       "4                                              India  September 24, 2021   \n",
-       "5                                                NaN  September 24, 2021   \n",
-       "6                                                NaN  September 24, 2021   \n",
-       "7  United States, Ghana, Burkina Faso, United Kin...  September 24, 2021   \n",
-       "8                                     United Kingdom  September 24, 2021   \n",
-       "9                                      United States  September 24, 2021   \n",
-       "\n",
-       "   release_year rating   duration  \\\n",
-       "0          2020  PG-13     90 min   \n",
-       "1          2021  TV-MA  2 Seasons   \n",
-       "2          2021  TV-MA   1 Season   \n",
-       "3          2021  TV-MA   1 Season   \n",
-       "4          2021  TV-MA  2 Seasons   \n",
-       "5          2021  TV-MA   1 Season   \n",
-       "6          2021     PG     91 min   \n",
-       "7          1993  TV-MA    125 min   \n",
-       "8          2021  TV-14  9 Seasons   \n",
-       "9          2021  PG-13    104 min   \n",
+       "           date_added  release_year rating   duration  \\\n",
+       "0  September 25, 2021          2020  PG-13     90 min   \n",
+       "1  September 24, 2021          2021  TV-MA  2 Seasons   \n",
+       "2  September 24, 2021          2021  TV-MA   1 Season   \n",
        "\n",
        "                                           listed_in  \\\n",
        "0                                      Documentaries   \n",
        "1    International TV Shows, TV Dramas, TV Mysteries   \n",
        "2  Crime TV Shows, International TV Shows, TV Act...   \n",
-       "3                             Docuseries, Reality TV   \n",
-       "4  International TV Shows, Romantic TV Shows, TV ...   \n",
-       "5                 TV Dramas, TV Horror, TV Mysteries   \n",
-       "6                           Children & Family Movies   \n",
-       "7   Dramas, Independent Movies, International Movies   \n",
-       "8                       British TV Shows, Reality TV   \n",
-       "9                                   Comedies, Dramas   \n",
        "\n",
        "                                         description  \n",
        "0  As her father nears the end of his life, filmm...  \n",
        "1  After crossing paths at a party, a Cape Town t...  \n",
-       "2  To protect his family from a powerful drug lor...  \n",
-       "3  Feuds, flirtations and toilet talk go down amo...  \n",
-       "4  In a city of coaching centers known to train I...  \n",
-       "5  The arrival of a charismatic young priest brin...  \n",
-       "6  Equestria's divided. But a bright-eyed hero be...  \n",
-       "7  On a photo shoot in Ghana, an American model s...  \n",
-       "8  A talented batch of amateur bakers face off in...  \n",
-       "9  A woman adjusting to life after a loss contend...  "
+       "2  To protect his family from a powerful drug lor...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# \n",
     "col = ['show_id', 'type', 'title', 'director', 'cast', 'country', 'date_added',\n",
     "       'release_year', 'rating', 'duration', 'listed_in', 'description']\n",
     "df = df[col]\n",
-    "df.head(10)"
+    "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1eb0a572",
    "metadata": {},
    "outputs": [
@@ -319,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "so dong thieu \n",
+      "Total null value: \n",
       "show_id            0\n",
       "type               0\n",
       "title              0\n",
@@ -337,19 +174,19 @@
     }
    ],
    "source": [
-    "print(f'so dong thieu \\n{df.isnull().sum()}')\n",
+    "print(f'Total null value: \\n{df.isnull().sum()}')\n",
     "df = df.dropna()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "1e9dec48",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make combine feature to extract to vector \n",
     "content_feature = ['type','director','description','cast']\n",
-    "combine = None\n",
     "df['combined_feature'] = df['type'] + ' ' + \\\n",
     "                         df['director'] + ' ' + \\\n",
     "                         df['description'] + ' ' + \\\n",
@@ -359,29 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5eba7b22",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# transfer features to vector \n",
     "vectorize = TfidfVectorizer(stop_words='english',max_features=10000)\n",
     "vector_matrix = vectorize.fit_transform(df['combined_feature'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a18d19ad",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save movie index to indices\n",
     "df['title_lower'] = df['title'].str.lower().str.strip()\n",
     "indices = pd.Series(df.index, index=df['title_lower']).drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fc31d195",
    "metadata": {},
    "outputs": [],
@@ -389,11 +228,14 @@
     "def content_based_filter(title,top=5):\n",
     "    idx = indices[title]\n",
     "\n",
+    "    # calculate cosine similarity\n",
     "    cosine_sim = linear_kernel(vector_matrix[idx], vector_matrix).flatten()\n",
     "    sim_score = list(enumerate(cosine_sim))\n",
+    "\n",
+    "    #sort similarity\n",
     "    sim_score_sorted = sorted(sim_score, key=lambda x: x[1], reverse=True)\n",
     "    sim_score_sorted = sim_score_sorted[1:top+1]\n",
-    "\n",
+    "    # get top n movie recommend\n",
     "    movie_index = [i[0] for i in sim_score_sorted]\n",
     "\n",
     "    return df.iloc[movie_index][['title','description','director','cast','duration']]"
@@ -401,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "7eef643d",
    "metadata": {},
    "outputs": [
@@ -409,16 +251,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "cant find movie name\n"
+      "['strange voices']\n",
+      "                                      title  \\\n",
+      "1666  Betty White: First Lady of Television   \n",
+      "433                     The Yeti Adventures   \n",
+      "3304                   The Ryan White Story   \n",
+      "3224         Interview with a Serial Killer   \n",
+      "555             Secret Magic Control Agency   \n",
+      "\n",
+      "                                            description  \\\n",
+      "1666  This documentary on actress and television pro...   \n",
+      "433   An explorer and a detective set off for the sn...   \n",
+      "3304  After contracting HIV from a tainted blood tre...   \n",
+      "3224  In this jailhouse interview, Arthur Shawcross,...   \n",
+      "555   Hansel and Gretel of fairy tale fame â now a...   \n",
+      "\n",
+      "                                 director  \\\n",
+      "1666                      Steve Boettcher   \n",
+      "433   Pierre Greco, Nancy Florence Savard   \n",
+      "3304                        John Herzfeld   \n",
+      "3224                   Christopher Martin   \n",
+      "555                     Aleksey Tsitsilin   \n",
+      "\n",
+      "                                                   cast duration  \n",
+      "1666  Betty White, Valerie Bertinelli, Georgia Engel...   56 min  \n",
+      "433   Rachelle Lefevre, Noel Fisher, Colm Feore, Jul...   85 min  \n",
+      "3304  Judith Light, Lukas Haas, Michael Bowen, Nikki...   94 min  \n",
+      "3224                                   Arthur Shawcross   45 min  \n",
+      "555   Nicholas Corda, Sylvana Joyce, Alyson Leigh Ro...  105 min  \n"
      ]
     }
    ],
    "source": [
-    "all_titles = df['title_lower'].tolist()\n",
+    "\n",
     "name = input('enter name: ').lower().strip()\n",
+    "\n",
+    "# find closest movie name from data that match input\n",
+    "all_titles = df['title_lower'].tolist()\n",
     "closest_match = difflib.get_close_matches(name,all_titles,n=1,cutoff=0.8)\n",
     "print(closest_match)\n",
+    "\n",
     "if closest_match:\n",
     "    print(content_based_filter(closest_match))\n",
     "else:\n",
