--- a/notebook/netflix_data_preprocessing.ipynb
+++ b/notebook/netflix_data_preprocessing.ipynb
@@ -11,13 +11,13 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "import difflib\n",
-    "path = r'data\\netflix_titles.csv'\n",
+    "path = 'data/netflix_titles.csv'\n",
     "df = pd.read_csv(path,encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "be41ae47",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "2  To protect his family from a powerful drug lor...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "1eb0a572",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1e9dec48",
    "metadata": {},
    "outputs": [],
@@ -191,110 +191,9 @@
     "                         df['director'] + ' ' + \\\n",
     "                         df['description'] + ' ' + \\\n",
     "                         df['cast']\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5eba7b22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# transfer features to vector \n",
-    "vectorize = TfidfVectorizer(stop_words='english',max_features=10000)\n",
-    "vector_matrix = vectorize.fit_transform(df['combined_feature'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a18d19ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save movie index to indices\n",
-    "df['title_lower'] = df['title'].str.lower().str.strip()\n",
-    "indices = pd.Series(df.index, index=df['title_lower']).drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "fc31d195",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def content_based_filter(title,top=5):\n",
-    "    idx = indices[title]\n",
-    "\n",
-    "    # calculate cosine similarity\n",
-    "    cosine_sim = linear_kernel(vector_matrix[idx], vector_matrix).flatten()\n",
-    "    sim_score = list(enumerate(cosine_sim))\n",
-    "\n",
-    "    #sort similarity\n",
-    "    sim_score_sorted = sorted(sim_score, key=lambda x: x[1], reverse=True)\n",
-    "    sim_score_sorted = sim_score_sorted[1:top+1]\n",
-    "    # get top n movie recommend\n",
-    "    movie_index = [i[0] for i in sim_score_sorted]\n",
-    "\n",
-    "    return df.iloc[movie_index][['title','description','director','cast','duration']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eef643d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['strange voices']\n",
-      "                                      title  \\\n",
-      "1666  Betty White: First Lady of Television   \n",
-      "433                     The Yeti Adventures   \n",
-      "3304                   The Ryan White Story   \n",
-      "3224         Interview with a Serial Killer   \n",
-      "555             Secret Magic Control Agency   \n",
-      "\n",
-      "                                            description  \\\n",
-      "1666  This documentary on actress and television pro...   \n",
-      "433   An explorer and a detective set off for the sn...   \n",
-      "3304  After contracting HIV from a tainted blood tre...   \n",
-      "3224  In this jailhouse interview, Arthur Shawcross,...   \n",
-      "555   Hansel and Gretel of fairy tale fame â now a...   \n",
-      "\n",
-      "                                 director  \\\n",
-      "1666                      Steve Boettcher   \n",
-      "433   Pierre Greco, Nancy Florence Savard   \n",
-      "3304                        John Herzfeld   \n",
-      "3224                   Christopher Martin   \n",
-      "555                     Aleksey Tsitsilin   \n",
-      "\n",
-      "                                                   cast duration  \n",
-      "1666  Betty White, Valerie Bertinelli, Georgia Engel...   56 min  \n",
-      "433   Rachelle Lefevre, Noel Fisher, Colm Feore, Jul...   85 min  \n",
-      "3304  Judith Light, Lukas Haas, Michael Bowen, Nikki...   94 min  \n",
-      "3224                                   Arthur Shawcross   45 min  \n",
-      "555   Nicholas Corda, Sylvana Joyce, Alyson Leigh Ro...  105 min  \n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "name = input('enter name: ').lower().strip()\n",
-    "\n",
-    "# find closest movie name from data that match input\n",
-    "all_titles = df['title_lower'].tolist()\n",
-    "closest_match = difflib.get_close_matches(name,all_titles,n=1,cutoff=0.8)\n",
-    "print(closest_match)\n",
-    "\n",
-    "if closest_match:\n",
-    "    print(content_based_filter(closest_match))\n",
-    "else:\n",
-    "    print('cant find movie name')\n"
+    "df = df.reset_index(drop=True)\n",
+    "#save data after preprocessing\n",
+    "df.to_csv('netflix_titles_clean.csv', index=False)"
    ]
   }
  ],
