--- a/notebook/netflix_data_preprocessing.ipynb
+++ b/notebook/netflix_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "af546586",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,13 @@
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
-    "import difflib\n",
-    "path = 'data/netflix_titles.csv'\n",
-    "df = pd.read_csv(path,encoding='latin-1')"
+    "path = r'D:\\Project\\movie-recommend-system\\data\\netflix_titles.csv'\n",
+    "df = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "be41ae47",
    "metadata": {},
    "outputs": [
@@ -133,7 +132,7 @@
        "2  To protect his family from a powerful drug lor...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1eb0a572",
    "metadata": {},
    "outputs": [
@@ -180,6 +179,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "650fb4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_text(text):\n",
+    "    try:\n",
+    "        return text.encode(\"latin1\").decode(\"utf-8\")\n",
+    "    except:\n",
+    "        return text\n",
+    "\n",
+    "df[\"title\"] = df[\"title\"].apply(fix_text)\n",
+    "df[\"cast\"] = df[\"cast\"].apply(fix_text)\n",
+    "df[\"director\"] = df[\"director\"].apply(fix_text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1e9dec48",
    "metadata": {},
@@ -193,7 +210,7 @@
     "                         df['cast']\n",
     "df = df.reset_index(drop=True)\n",
     "#save data after preprocessing\n",
-    "df.to_csv('netflix_titles_clean.csv', index=False)"
+    "df.to_csv('data/netflix_titles_clean.csv', index=False)"
    ]
   }
  ],
